new file:   Dockerfile.celery 	modified:   README.md 	new file:   backend/app/celery_app.py 	new file:   backend/app/db.py 	modified:   backend/app/main.py 	modified:   backend/app/queue.py 	new file:   backend/app/tasks.py 	modified:   configs/pipeline.yaml 	new file:   docker-compose.yml 	new file:   frontend/web/index.html 	modified:   pipeline/pipeline.py 	new file:   providers/__init__.py 	new file:   providers/base.py 	new file:   providers/kling_api.py 	new file:   providers/local_stub.py 	modified:   requirements.txt 	modified:   sdk/python/neorose_vfr_client.py

--- a/configs/pipeline.yaml
+++ b/configs/pipeline.yaml
@@ -5,6 +5,8 @@ finisher:
   steps: 38
   cfg: 6.2
   res_long: 1344
+  backend: local  # local | kling
+  escalate_on_fail: false
   ctrl:
     pose: 0.55
     depth: 0.65
@@ -43,4 +45,3 @@ qa_thresholds:
     step_increase: 5
     garment_adapter_delta: 0.05
     denoise_delta: -0.02
-
