modified:   README.md 	new file:   alembic/versions/0003_billing_and_flags.py 	new file:   backend/app/billing.py 	modified:   backend/app/db.py 	new file:   backend/app/graphql_schema.py 	new file:   backend/app/logging_config.py 	modified:   backend/app/main.py 	new file:   backend/app/metrics.py 	modified:   backend/app/pipeline_runner.py 	modified:   backend/app/queue.py 	modified:   backend/app/tasks.py 	modified:   configs/pipeline.yaml 	new file:   pipeline/controls.py 	modified:   pipeline/garment_warping.py 	modified:   pipeline/person_parsing.py 	modified:   pipeline/pipeline.py 	new file:   pipeline/pose_extraction_mediapipe.py 	new file:   pipeline/qa.py 	new file:   pipeline/vton_expert.py 	modified:   providers/base.py 	modified:   providers/kling_api.py 	modified:   providers/local_stub.py 	modified:   requirements.txt 	new file:   sdk/node/neoroseVfrClient.js

--- a/configs/pipeline.yaml
+++ b/configs/pipeline.yaml
@@ -34,6 +34,9 @@ io_contracts:
     in: ["soft render:PNG", "control maps:PNG", "adapters:features"]
     out: ["final:PNG/JPEG"]
 
+vton:
+  enabled: true
+
 qa_thresholds:
   garment_fidelity_clip_min: 0.28
   garment_fidelity_lpips_max: 0.32
