--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,8 @@ tenacity==8.5.0
 boto3==1.35.41
 firebase-admin==6.5.0
 python-dotenv==1.0.1
+strawberry-graphql==0.247.1
+prometheus-client==0.20.0
+opencv-python==4.10.0.84
+scikit-image==0.24.0
+stripe==9.8.0
