modified:   README.md 	new file:   alembic/versions/0005_artifact_local_fields.py 	new file:   backend/app/artifacts.py 	modified:   backend/app/db.py 	modified:   backend/app/main.py 	new file:   backend/app/validators.py 	new file:   configs/models.yaml 	modified:   configs/pipeline.yaml 	modified:   docker-compose.yml 	modified:   pipeline/pipeline.py 	modified:   providers/base.py 	new file:   providers/stable_vton_stub.py 	new file:   providers/vton_local.py 	new file:   scripts/init_plans.py 	new file:   sdk/node/package.json

--- a/configs/pipeline.yaml
+++ b/configs/pipeline.yaml
@@ -36,6 +36,7 @@ io_contracts:
 
 vton:
   enabled: true
+  provider: local  # local | stableviton
 
 qa_thresholds:
   garment_fidelity_clip_min: 0.28
