--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,10 +36,14 @@ services:
       - CELERY_RESULT_BACKEND=redis://redis:6379/1
       - DATABASE_URL=postgresql+psycopg://vfr:vfr@postgres:5432/vfr
       - VFR_CONFIG=/app/configs/pipeline.yaml
+      - MODELS_DIR=/app/storage/models
+      - LOCKS_DIR=/app/storage/locks
     depends_on:
       - redis
       - postgres
     command: ["celery", "-A", "backend.app.tasks", "worker", "-l", "INFO"]
+    volumes:
+      - app_storage:/app/storage
 
   api:
     build:
@@ -53,6 +57,10 @@ services:
       - REDIS_URL=redis://redis:6379/2
       - VFR_CONFIG=/app/configs/pipeline.yaml
       - STORAGE_BACKEND=local
+      - MODELS_DIR=/app/storage/models
+      - LOCKS_DIR=/app/storage/locks
+      - PREFETCH_MODELS=0
+      - MODELS_CONFIG=/app/configs/models.yaml
       - AUTH_REQUIRED=0
       - RATE_LIMIT_ENABLED=1
       - RL_LIMIT=60
@@ -63,12 +71,14 @@ services:
       - redis
       - postgres
       - celery_worker
+      - migrate
     healthcheck:
       test: ["CMD-SHELL", "python - <<'PY'\nimport sys, urllib.request\ntry:\n  r = urllib.request.urlopen('http://localhost:8000/health', timeout=2)\n  sys.exit(0 if r.status==200 else 1)\nexcept Exception:\n  sys.exit(1)\nPY"]
       interval: 5s
       timeout: 5s
       retries: 30
-      - migrate
+    volumes:
+      - app_storage:/app/storage
 
   migrate:
     build:
@@ -111,3 +121,4 @@ services:
 volumes:
   pgdata:
   minio_data:
+  app_storage:
