new file:   Dockerfile.api.gpu 	new file:   Dockerfile.remote 	modified:   README.md 	new file:   docker-compose.gpu.yml 	modified:   docker-compose.yml 	modified:   pipeline/pipeline.py 	modified:   providers/finisher_diffusers.py 	new file:   providers/finisher_sdxl_controlnet.py 	new file:   providers/geometry_smplx_stub.py 	new file:   providers/pose_ultralytics.py 	new file:   remote/server.py 	modified:   requirements-ml.txt

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,8 @@ services:
       - RATE_LIMIT_ENABLED=1
       - RL_LIMIT=60
       - RL_WINDOW=60
+      - REMOTE_FINISHER_URL=http://remote_worker:9000
+      - REMOTE_VTON_URL=http://remote_worker:9000
     ports:
       - "8000:8000"
     depends_on:
@@ -72,6 +74,7 @@ services:
       - postgres
       - celery_worker
       - migrate
+      - remote_worker
     healthcheck:
       test: ["CMD-SHELL", "python - <<'PY'\nimport sys, urllib.request\ntry:\n  r = urllib.request.urlopen('http://localhost:8000/health', timeout=2)\n  sys.exit(0 if r.status==200 else 1)\nexcept Exception:\n  sys.exit(1)\nPY"]
       interval: 5s
@@ -122,3 +125,9 @@ volumes:
   pgdata:
   minio_data:
   app_storage:
+  remote_worker:
+    build:
+      context: .
+      dockerfile: Dockerfile.remote
+    ports:
+      - "9000:9000"
