modified:   .env.example 	modified:   Dockerfile.api 	modified:   Dockerfile.celery

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,11 @@ REDIS_URL=redis://localhost:6379/2
 DATABASE_URL=postgresql+psycopg://vfr:vfr@localhost:5432/vfr
 VFR_CONFIG=./configs/pipeline.yaml
 FINISHER_BACKEND=local
+PREFETCH_MODELS=1
+PREFETCH_HF_MODELS=1
+MODELS_CONFIG=./configs/models.yaml
+HF_HOME=./storage/models/hf
+TORCH_HOME=./storage/models/torch
 
 # Rate limiting
 RATE_LIMIT_ENABLED=1
@@ -35,6 +40,35 @@ STORAGE_BACKEND=local
 VFR_STORAGE=storage
 RESULT_REDIRECT=1
 
+# Finisher (SDXL/Flux/ControlNet)
+SDXL_BASE_ID=stabilityai/stable-diffusion-xl-base-1.0
+SDXL_REFINER_ID=stabilityai/stable-diffusion-xl-refiner-1.0
+SDXL_MODEL_ID=stabilityai/sdxl-turbo
+FLUX_MODEL_ID=black-forest-labs/FLUX.1-dev
+# ControlNets (override individually or provide SDXL_CN_IDS comma-separated)
+# SDXL_CN_CANNY=diffusers/controlnet-canny-sdxl-1.0
+# SDXL_CN_POSE=diffusers/controlnet-openpose-sdxl-1.0
+# SDXL_CN_DEPTH=diffusers/controlnet-depth-sdxl-1.0
+# SDXL_CN_NORMAL=diffusers/controlnet-normal-sdxl-1.0
+# SDXL_CN_SEG=diffusers/controlnet-seg-sdxl-1.0
+# SDXL_CN_IDS=
+SDXL_PROMPT=photo-realistic garment try-on, detailed fabric, natural lighting
+SDXL_NEGATIVE=low quality, blur, artifacts, watermark
+SDXL_STEPS=30
+SDXL_GUIDANCE=6.0
+SDXL_REFINER_STEPS=20
+SDXL_REFINER_GUIDANCE=5.0
+
+# Providers: pose/segmentation/geometry
+YOLOV8_POSE_MODEL=./storage/models/yolo_v8_pose/v8n/yolov8n-pose.pt
+REALESRGAN_WEIGHTS=./storage/models/realesrgan/x4plus/RealESRGAN_x4plus.pth
+# SMPLX_URL=...
+# SMPLX_S3_URI=s3://...
+# SMPLX_SHA256=...
+# STABLEVITON_URL=...
+# STABLEVITON_S3_URI=s3://...
+# STABLEVITON_SHA256=...
+
 # S3/MinIO settings
 S3_BUCKET=vfr
 S3_REGION=us-east-1
@@ -43,4 +77,3 @@ S3_ACCESS_KEY_ID=minioadmin
 S3_SECRET_ACCESS_KEY=minioadmin
 S3_PREFIX=vfr/
 # CDN_BASE_URL=https://cdn.example.com
-
