--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -2,8 +2,9 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements.txt requirements-ml.txt ./
+RUN pip install --no-cache-dir -r requirements.txt && \
+    pip install --no-cache-dir -r requirements-ml.txt
 
 COPY . .
 
@@ -13,4 +14,3 @@ ENV PYTHONUNBUFFERED=1
 
 EXPOSE 8000
 CMD ["docker/api-entrypoint.sh"]
-
