--- a/.env.example
+++ b/.env.example
@@ -77,3 +77,7 @@ S3_ACCESS_KEY_ID=minioadmin
 S3_SECRET_ACCESS_KEY=minioadmin
 S3_PREFIX=vfr/
 # CDN_BASE_URL=https://cdn.example.com
+# GPU settings
+DOCKERFILE_API=Dockerfile.api.gpu
+DOCKERFILE_CELERY=Dockerfile.api.gpu
+GPU_REQUEST=all
