--- a/Dockerfile.api.gpu
+++ b/Dockerfile.api.gpu
@@ -1,7 +1,7 @@
 FROM nvidia/cuda:12.4.1-runtime-ubuntu22.04
 
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && apt-get install -y python3 python3-venv python3-pip && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y python3 python3-venv python3-pip python-is-python3 && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 COPY requirements.txt requirements-ml.txt ./
