--- a/configs/models.yaml
+++ b/configs/models.yaml
@@ -56,6 +56,10 @@ artifacts:
     unpack: false
 
   # --- Garment UV/inpaint + coarse mesh + fabric classifier ---
+  - name: big_lama
+    version: v1
+    url: https://huggingface.co/smartywu/big-lama/resolve/main/big-lama.zip
+    unpack: true
   - name: clip_vit_l14
     version: v1
     url: https://huggingface.co/openai/clip-vit-large-patch14/resolve/main/pytorch_model.bin
@@ -91,7 +95,5 @@ hf_models:
   # Snapshot IP-Adapter repos to avoid fragile direct-file links
   - h94/IP-Adapter
   - h94/IP-Adapter-FaceID
-  # LaMa (Big-Lama) snapshot for UV inpainting weights
-  - saic-mdal/LaMa
   # TripoSR snapshot (coarse clothed human mesh)
   - stabilityai/TripoSR
