modified:   backend/app/main.py 	modified:   docker-compose.yml 	modified:   pipeline/qa.py

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -176,6 +176,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.remote
+    ports:
+      - "9002:9000"
     restart: unless-stopped
 
   prometheus:
