--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     environment:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/1
+      - REDIS_URL=redis://redis:6379/2
       - DATABASE_URL=postgresql+psycopg://vfr:vfr@postgres:5432/vfr
       - VFR_CONFIG=/app/configs/pipeline.yaml
       - MODELS_DIR=/app/storage/models
@@ -101,7 +102,7 @@ services:
       - SMPLX_HOME=/app/storage/models/smplx
       - PIXIE_HOME=/app/storage/models/pixie
       - AUTH_REQUIRED=0
-      - RATE_LIMIT_ENABLED=1
+      - RATE_LIMIT_ENABLED=0
       - RL_LIMIT=60
       - RL_WINDOW=60
       - REMOTE_FINISHER_URL=http://remote_worker:9000
