new file:   Dockerfile.vton_stable 	modified:   backend/app/artifacts.py 	modified:   docker-compose.yml 	modified:   pipeline/person_parsing.py 	modified:   pipeline/pipeline.py 	new file:   providers/segmentation_schp.py 	modified:   providers/vton_local.py 	new file:   providers/vton_stable.py 	new file:   vton_service/server.py

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,6 +120,7 @@ services:
       - S3_SECRET_ACCESS_KEY=minioadmin
       - S3_PREFIX=vfr/
       - RESULT_REDIRECT=1
+      - VTON_EXPERT_URL=http://vton_expert:9010
     restart: unless-stopped
     ports:
       - "8000:8000"
@@ -185,6 +186,19 @@ services:
       dockerfile: Dockerfile.remote
     ports:
       - "9002:9000"
+    restart: unless-stopped
+
+  vton_expert:
+    build:
+      context: .
+      dockerfile: Dockerfile.vton_stable
+    environment:
+      - PYTHONUNBUFFERED=1
+    ports:
+      - "9010:9010"
+    volumes:
+      - ./third_party:/app/third_party:ro
+      - ./storage:/app/storage
     restart: unless-stopped
 
   prometheus:
