--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,7 @@ services:
     volumes:
       - ./storage:/app/storage
       - ./manual_downloads:/app/manual_downloads:ro
+      - ./third_party:/app/third_party
     gpus: ${GPU_REQUEST:-all}
 
   api:
@@ -138,6 +139,7 @@ services:
     volumes:
       - ./storage:/app/storage
       - ./manual_downloads:/app/manual_downloads:ro
+      - ./third_party:/app/third_party
     gpus: ${GPU_REQUEST:-all}
 
   migrate:
