--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,9 @@ services:
       - MANUAL_MODELS_DIR=/app/manual_downloads
       - SMPLX_HOME=/app/storage/models/smplx
       - PIXIE_HOME=/app/storage/models/pixie
+      - SCHP_REPO_DIR=/app/third_party/schp
+      - SCHP_MODEL_PATH=/app/storage/models/schp_lip/20190826/exp-schp-201908261155-lip.pth
+      - SCHP_INFER_CMD=python scripts/schp_infer.py --weights {WEIGHTS} --image {IMAGE} --out {OUT}
       - S3_BUCKET=vfr
       - S3_REGION=us-east-1
       - S3_ENDPOINT_URL=http://minio:9000
@@ -108,6 +111,9 @@ services:
       - MANUAL_MODELS_DIR=/app/manual_downloads
       - SMPLX_HOME=/app/storage/models/smplx
       - PIXIE_HOME=/app/storage/models/pixie
+      - SCHP_REPO_DIR=/app/third_party/schp
+      - SCHP_MODEL_PATH=/app/storage/models/schp_lip/20190826/exp-schp-201908261155-lip.pth
+      - SCHP_INFER_CMD=python scripts/schp_infer.py --weights {WEIGHTS} --image {IMAGE} --out {OUT}
       - AUTH_REQUIRED=0
       - RATE_LIMIT_ENABLED=0
       - RL_LIMIT=60
