modified:   Dockerfile.vton_stable 	modified:   backend/app/main.py 	modified:   configs/pipeline.yaml 	modified:   docker-compose.yml 	modified:   providers/vton_local.py 	modified:   providers/vton_stable.py 	modified:   vton_service/server.py

--- a/configs/pipeline.yaml
+++ b/configs/pipeline.yaml
@@ -36,7 +36,7 @@ io_contracts:
 
 vton:
   enabled: true
-  provider: local  # local | stableviton | remote
+  provider: stableviton  # local | stableviton | remote
 
 providers:
   segmentation: local  # local | torchvision | remote
