--- a/Dockerfile.vton_stable
+++ b/Dockerfile.vton_stable
@@ -1,14 +1,21 @@
-FROM python:3.10-slim
+FROM nvidia/cuda:12.4.1-runtime-ubuntu22.04
 
+ENV DEBIAN_FRONTEND=noninteractive
 WORKDIR /app
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    libgl1 libglib2.0-0 && rm -rf /var/lib/apt/lists/*
+    python3 python3-venv python3-pip python-is-python3 \
+    libgl1 libglib2.0-0 \
+    && rm -rf /var/lib/apt/lists/*
 
-RUN pip install --no-cache-dir fastapi uvicorn[standard] Pillow requests
+# Install PyTorch (CUDA 12.4) + deps needed by StableVITON inference
+RUN pip install --no-cache-dir --index-url https://download.pytorch.org/whl/cu124 \
+    torch torchvision && \
+    pip install --no-cache-dir fastapi uvicorn[standard] Pillow requests \
+    omegaconf opencv-python-headless albumentations==1.3.1 \
+    einops tqdm matplotlib scipy
 
 COPY vton_service/server.py /app/server.py
 
 EXPOSE 9010
 CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "9010"]
-
