--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       - HF_HOME=/app/storage/models/hf
       - TORCH_HOME=/app/storage/models/torch
       - PREFETCH_MODELS=1
-      - PREFETCH_HF_MODELS=0
+      - PREFETCH_HF_MODELS=1
       - YOLOV8_POSE_MODEL=/app/storage/models/yolo_v8_pose/v8x/yolov8x-pose.pt
       - REALESRGAN_WEIGHTS=/app/storage/models/realesrgan/x4plus/RealESRGAN_x4plus.pth
       - SDXL_BASE_PATH=/app/storage/models/sdxl_base/1.0/sd_xl_base_1.0.safetensors
@@ -95,7 +95,7 @@ services:
       - HF_HOME=/app/storage/models/hf
       - TORCH_HOME=/app/storage/models/torch
       - PREFETCH_MODELS=1
-      - PREFETCH_HF_MODELS=0
+      - PREFETCH_HF_MODELS=1
       - MODELS_CONFIG=/app/configs/models.yaml
       - YOLOV8_POSE_MODEL=/app/storage/models/yolo_v8_pose/v8x/yolov8x-pose.pt
       - REALESRGAN_WEIGHTS=/app/storage/models/realesrgan/x4plus/RealESRGAN_x4plus.pth
@@ -202,12 +202,15 @@ services:
       dockerfile: Dockerfile.vton_stable
     environment:
       - PYTHONUNBUFFERED=1
+      - STABLEVITON_WEIGHTS_DIR=/app/storage/models/stableviton/weights
+      - STABLEVITON_INFER_CMD=python third_party/stableviton/StableVITON-master/inference.py --config_path third_party/stableviton/StableVITON-master/configs/VITONHD.yaml --model_load_path {WEIGHTS_DIR}/VITONHD_PBE_pose.ckpt --data_root_dir {DATA_ROOT} --batch_size 1 --img_H 512 --img_W 384 --save_dir {OUT} --unpair
     ports:
       - "9010:9010"
     volumes:
       - ./third_party:/app/third_party:ro
       - ./storage:/app/storage
     restart: unless-stopped
+    gpus: ${GPU_REQUEST:-all}
 
   prometheus:
     image: prom/prometheus:latest
