--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,10 +1,12 @@
 FROM python:3.10-slim
+# syntax=docker/dockerfile:1.5
 
 WORKDIR /app
 
 COPY requirements.txt requirements-ml.txt ./
-RUN pip install --no-cache-dir -r requirements.txt && \
-    pip install --no-cache-dir -r requirements-ml.txt
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install -r requirements.txt && \
+    pip install -r requirements-ml.txt
 
 COPY . .
 
