--- a/Dockerfile.api.gpu
+++ b/Dockerfile.api.gpu
@@ -1,14 +1,17 @@
 FROM nvidia/cuda:12.4.1-runtime-ubuntu22.04
+# syntax=docker/dockerfile:1.5
 
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && apt-get install -y python3 python3-venv python3-pip python-is-python3 && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
+# Copy only requirements to leverage Docker layer cache
 COPY requirements.txt requirements-ml.txt ./
-# Install CUDA-enabled PyTorch first, then remaining deps
-RUN pip3 install --no-cache-dir --index-url https://download.pytorch.org/whl/cu124 torch torchvision && \
-    pip3 install --no-cache-dir -r requirements.txt && \
-    pip3 install --no-cache-dir -r requirements-ml.txt
+# Install CUDA-enabled PyTorch first, then remaining deps, with BuildKit cache for pip
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip3 install --index-url https://download.pytorch.org/whl/cu124 torch torchvision && \
+    pip3 install -r requirements.txt && \
+    pip3 install -r requirements-ml.txt
 COPY . .
 RUN chmod +x docker/api-entrypoint.sh && mkdir -p storage
 
