--- a/Dockerfile.vton_stable
+++ b/Dockerfile.vton_stable
@@ -1,17 +1,18 @@
-FROM nvidia/cuda:12.4.1-runtime-ubuntu22.04
+FROM python:3.10-slim
+# syntax=docker/dockerfile:1.5
 
 ENV DEBIAN_FRONTEND=noninteractive
 WORKDIR /app
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    python3 python3-venv python3-pip python-is-python3 \
     libgl1 libglib2.0-0 \
     && rm -rf /var/lib/apt/lists/*
 
-# Install PyTorch (CUDA 12.4) + deps needed by StableVITON inference
-RUN pip install --no-cache-dir --index-url https://download.pytorch.org/whl/cu124 \
+# Install PyTorch (CUDA 12.4 wheels) + deps needed by StableVITON inference
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install --index-url https://download.pytorch.org/whl/cu124 \
     torch torchvision && \
-    pip install --no-cache-dir fastapi uvicorn[standard] Pillow requests \
+    pip install fastapi uvicorn[standard] Pillow requests \
     omegaconf opencv-python-headless albumentations==1.3.1 \
     einops tqdm matplotlib scipy
 
