--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,7 @@ services:
       - MANUAL_MODELS_DIR=/app/manual_downloads
       - SMPLX_HOME=/app/storage/models/smplx
       - PIXIE_HOME=/app/storage/models/pixie
+      - VTON_EXPERT_URL=http://vton_expert:9010
       - SCHP_REPO_DIR=/app/third_party/schp
       - SCHP_MODEL_PATH=/app/storage/models/schp_lip/20190826/exp-schp-201908261155-lip.pth
       - SCHP_INFER_CMD=python scripts/schp_infer.py --weights {WEIGHTS} --image {IMAGE} --out {OUT}
@@ -204,6 +205,9 @@ services:
       - PYTHONUNBUFFERED=1
       - STABLEVITON_WEIGHTS_DIR=/app/storage/models/stableviton/weights
       - STABLEVITON_INFER_CMD=python third_party/stableviton/StableVITON-master/inference.py --config_path third_party/stableviton/StableVITON-master/configs/VITONHD.yaml --model_load_path {WEIGHTS_DIR}/VITONHD_PBE_pose.ckpt --data_root_dir {DATA_ROOT} --batch_size 1 --img_H 512 --img_W 384 --save_dir {OUT} --unpair
+      - HF_HOME=/app/storage/models/hf
+      - TRANSFORMERS_OFFLINE=1
+      - HF_HUB_OFFLINE=1
     ports:
       - "9010:9010"
     volumes:
