--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,8 +53,11 @@ services:
       - IP_ADAPTER_SDXL_DIR=/app/storage/models/snapshots/h94-IP-Adapter/sdxl_models
       - IP_ADAPTER_SDXL_WEIGHTS_NAME=ip-adapter_sdxl.safetensors
       - IP_ADAPTER_GARMENT_SCALE=1.0
-      - HF_HUB_OFFLINE=1
-      - TRANSFORMERS_OFFLINE=1
+      - HF_TOKEN=${HF_TOKEN}
+      - HUGGINGFACE_TOKEN=${HF_TOKEN}
+      - HUGGINGFACEHUB_API_TOKEN=${HF_TOKEN}
+      - HF_HUB_OFFLINE=${HF_HUB_OFFLINE:-1}
+      - TRANSFORMERS_OFFLINE=${TRANSFORMERS_OFFLINE:-1}
       - MANUAL_MODELS_DIR=/app/manual_downloads
       - SMPLX_HOME=/app/storage/models/smplx
       - PIXIE_HOME=/app/storage/models/pixie
@@ -107,8 +110,11 @@ services:
       - IP_ADAPTER_SDXL_DIR=/app/storage/models/snapshots/h94-IP-Adapter/sdxl_models
       - IP_ADAPTER_SDXL_WEIGHTS_NAME=ip-adapter_sdxl.safetensors
       - IP_ADAPTER_GARMENT_SCALE=1.0
-      - HF_HUB_OFFLINE=1
-      - TRANSFORMERS_OFFLINE=1
+      - HF_TOKEN=${HF_TOKEN}
+      - HUGGINGFACE_TOKEN=${HF_TOKEN}
+      - HUGGINGFACEHUB_API_TOKEN=${HF_TOKEN}
+      - HF_HUB_OFFLINE=${HF_HUB_OFFLINE:-1}
+      - TRANSFORMERS_OFFLINE=${TRANSFORMERS_OFFLINE:-1}
       - MANUAL_MODELS_DIR=/app/manual_downloads
       - SMPLX_HOME=/app/storage/models/smplx
       - PIXIE_HOME=/app/storage/models/pixie
@@ -206,8 +212,11 @@ services:
       - STABLEVITON_WEIGHTS_DIR=/app/storage/models/stableviton/weights
       - STABLEVITON_INFER_CMD=python third_party/stableviton/StableVITON-master/inference.py --config_path third_party/stableviton/StableVITON-master/configs/VITONHD.yaml --model_load_path {WEIGHTS_DIR}/VITONHD_PBE_pose.ckpt --data_root_dir {DATA_ROOT} --batch_size 1 --img_H 512 --img_W 384 --save_dir {OUT} --unpair
       - HF_HOME=/app/storage/models/hf
-      - TRANSFORMERS_OFFLINE=1
-      - HF_HUB_OFFLINE=1
+      - HF_TOKEN=${HF_TOKEN}
+      - HUGGINGFACE_TOKEN=${HF_TOKEN}
+      - HUGGINGFACEHUB_API_TOKEN=${HF_TOKEN}
+      - TRANSFORMERS_OFFLINE=${TRANSFORMERS_OFFLINE:-1}
+      - HF_HUB_OFFLINE=${HF_HUB_OFFLINE:-1}
     ports:
       - "9010:9010"
     volumes:
