--- a/Dockerfile.vton_stable
+++ b/Dockerfile.vton_stable
@@ -15,7 +15,7 @@ RUN --mount=type=cache,target=/root/.cache/pip \
     pip install \
       fastapi uvicorn[standard] Pillow requests \
       omegaconf \
-      opencv-python==4.7.0.72 \
+      opencv-python-headless==4.7.0.72 \
       albumentations \
       einops \
       matplotlib \
