modified:   Dockerfile.vton_stable

--- a/Dockerfile.vton_stable
+++ b/Dockerfile.vton_stable
@@ -5,6 +5,11 @@ ENV DEBIAN_FRONTEND=noninteractive
 ENV PIP_PREFER_BINARY=1
 WORKDIR /app
 
+# Minimal system libs for OpenCV (cv2) used by StableVITON CLI
+RUN apt-get update && apt-get install -y --no-install-recommends \
+      libgl1 libglib2.0-0 \
+    && rm -rf /var/lib/apt/lists/*
+
 # Avoid apt to prevent flaky mirror errors; use headless wheels instead
 
 # Install PyTorch (CUDA 12.4 wheels) + deps needed by StableVITON inference
