--- a/Dockerfile.vton_stable
+++ b/Dockerfile.vton_stable
@@ -32,6 +32,7 @@ RUN --mount=type=cache,target=/root/.cache/pip \
       open-clip-torch==2.19.0 \
       diffusers==0.20.2 accelerate \
       huggingface_hub==0.20.2 \
+      pytorch-lightning==1.9.5 torchmetrics==0.11.4 \
       safetensors \
       typing-extensions \
       timm \
