--- a/Dockerfile.vton_stable
+++ b/Dockerfile.vton_stable
@@ -30,8 +30,11 @@ RUN --mount=type=cache,target=/root/.cache/pip \
       xformers==0.0.19 \
       triton==2.0.0 \
       open-clip-torch==2.19.0 \
-      diffusers==0.20.2 accelerate \
+      diffusers==0.20.2 accelerate==0.20.3 \
       huggingface_hub==0.20.2 \
+      clean-fid \
+      ipython \
+      lpips \
       pytorch-lightning==1.9.5 torchmetrics==0.11.4 \
       safetensors \
       typing-extensions \
@@ -39,6 +42,7 @@ RUN --mount=type=cache,target=/root/.cache/pip \
       numpy==1.24.4
 
 COPY vton_service/server.py /app/server.py
+COPY vton_service/infer_wrapper.py /app/infer_wrapper.py
 
 EXPOSE 9010
 CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "9010"]
