--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -212,7 +212,9 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - STABLEVITON_WEIGHTS_DIR=/app/storage/models/stableviton/weights
-      - STABLEVITON_INFER_CMD=python /app/infer_wrapper.py --config_path third_party/stableviton/StableVITON-master/configs/VITONHD.yaml --model_load_path {WEIGHTS_DIR}/VITONHD_PBE_pose.ckpt --data_root_dir {DATA_ROOT} --batch_size 1 --img_H 512 --img_W 384 --save_dir {OUT} --unpair
+      - STABLEVITON_INFER_CMD=python /app/infer_wrapper.py --config_path third_party/stableviton/StableVITON-master/configs/VITONHD.yaml --model_load_path {WEIGHTS_DIR}/VITONHD_PBE_pose.ckpt --data_root_dir {DATA_ROOT} --batch_size 1 --img_H 384 --img_W 288 --save_dir {OUT} --unpair
+      - PYTORCH_CUDA_ALLOC_CONF=max_split_size_mb:64,expandable_segments:True
+      - XFORMERS_MEMORY_EFFICIENT_ATTENTION=1
       - HF_HOME=/app/storage/models/hf
       - HF_TOKEN=${HF_TOKEN}
       - HUGGINGFACE_TOKEN=${HF_TOKEN}
