--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,7 +81,8 @@ services:
       - ./storage:/app/storage
       - ./manual_downloads:/app/manual_downloads:ro
       - ./third_party:/app/third_party
-    gpus: ${GPU_REQUEST:-all}
+    # Run worker on CPU to free GPU VRAM for expert
+    # gpus: ${GPU_REQUEST:-all}
 
   api:
     build:
@@ -155,7 +156,8 @@ services:
       - ./storage:/app/storage
       - ./manual_downloads:/app/manual_downloads:ro
       - ./third_party:/app/third_party
-    gpus: ${GPU_REQUEST:-all}
+    # Run API on CPU to free GPU VRAM for expert
+    # gpus: ${GPU_REQUEST:-all}
 
   migrate:
     build:
@@ -213,7 +215,7 @@ services:
       - PYTHONUNBUFFERED=1
       - STABLEVITON_WEIGHTS_DIR=/app/storage/models/stableviton/weights
       - STABLEVITON_INFER_CMD=python /app/infer_wrapper.py --config_path third_party/stableviton/StableVITON-master/configs/VITONHD.yaml --model_load_path /app/third_party/stableviton/StableVITON-master/ckpts/VITONHD_PBE_pose.ckpt --data_root_dir {DATA_ROOT} --batch_size 1 --img_H 320 --img_W 240 --save_dir {OUT} --unpair
-      - PYTORCH_CUDA_ALLOC_CONF=max_split_size_mb:64,garbage_collection_threshold:0.9
+      - PYTORCH_CUDA_ALLOC_CONF=max_split_size_mb:16,garbage_collection_threshold:0.9
       - XFORMERS_MEMORY_EFFICIENT_ATTENTION=1
       - HF_HOME=/app/storage/models/hf
       - HF_TOKEN=${HF_TOKEN}
